--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,29 @@
-* {
-    color: red;
+:root {
+
 }
 
-:root {
-    
+
+body {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 5fr;
+    grid-template-areas: 
+    "sidebar header"
+    "sidebar main";
+    height: 100vh;
+    width: 100vw;
+}
+
+.header {
+    grid-area: header;
+}
+.sidebar {
+    grid-area: sidebar;
+}
+.main-content {
+    grid-area: main;
+}
+
+body > div {
+    border: 1px solid black;
 }
