--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
 :root {
 
+
+
+}
+
+* {
+    box-sizing: border-box;
+    
 }
 
 
@@ -19,11 +26,99 @@ body {
 }
 .sidebar {
     grid-area: sidebar;
+    display: grid;
+    grid-template-rows: 1fr 5fr;
 }
-.main-content {
-    grid-area: main;
-}
+
+
+
 
 body > div {
     border: 1px solid black;
+}
+
+.project-card {
+    width:  clamp(200px ,calc(((100% - 16px) / 2)), 50%);
+    /* flex-basis: max(400px, calc((100% / 2))); */
+    /* height: 200px; */
+    border: 1px solid red;
+}
+
+/* LAYOUT */
+.sidebar > h1 {
+    grid-row: 1;
+}
+
+.sidebar nav {
+    display: grid;
+    grid-row: 2;
+    grid-template-rows: 1fr 1fr 2fr;
+}
+
+.sidebar > div.nav-links {
+    grid-row: 1;
+}
+
+.sidebar > div.misc-links {
+    grid-row: 2;
+}
+
+.header {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    border: 1px solid red;
+}
+
+.header .searchbar {
+    grid-row: 1;
+    grid-column: 1;
+}
+.header .user {
+    grid-row: 1;
+    grid-column: 2;
+}
+.header .actions {
+    grid-row: 2;
+    grid-column: 2;
+}
+.header .greeting {
+    grid-row: 2;
+    grid-column: 1;
+}
+
+.main-content {
+    grid-area: main;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.project-container {
+    grid-row: 1 / 3;
+    grid-column: 1;
+    display: grid;
+    grid-template-rows: 50px 1fr;
+}
+
+.project-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+
+.announcements {
+    grid-column: 2;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
+}
+
+.trending {
+    grid-column: 2;
+    grid-row: 2;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
 }
