--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ nav li,
     padding: 32px;
     border-left: 10px solid var(--card-color);
     border-radius: 10px;
-    box-shadow: 2px 2px 4px black;
+    box-shadow: 2px 2px 10px #a1a1aa;
     background-color: var(--card-background-color);
     min-width: 400px;
 }
@@ -199,6 +199,10 @@ li {
 
 img.icon {
     height: 35px;
+}
+
+img.icon,
+.sidebar span {
     cursor: pointer;
 }
 
@@ -238,13 +242,13 @@ div.greeting div.profile-image {
 
 button {
     background-color: var(--button-color);
-    border-radius: 8px;
-    width: 100px;
-    height: 1.8rem;
+    border-radius: 10px;
+    width: 110px;
+    height: 1.6rem;
     color: var(--font-color-sidebar);
     border: none;
     font-weight: bold;
-    box-shadow: 1px 1px 1px black;
+    /* box-shadow: 1px 1px 1px black; */
     font-size: 1.2rem;
     cursor: pointer;
 }
